# PluginTest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  README.md
src/Core/include/public/Core/: Component.h  CoreDll.h  MathTypes.h  SceneObject.h
src/Core/src/: Component.cpp  SceneObject.cpp
src/MyGame/: CMakeLists.txt  README.md
src/MyGame/src/: InputManager.cpp  InputManager.h  main.cpp
